--- a/notes/home/user/Spark/conf/spark-defaults.conf
+++ b/notes/home/user/Spark/conf/spark-defaults.conf
@@ -3,9 +3,7 @@
 ############################
 # 使用 YARN 作为资源管理器
 spark.master                       yarn
-# client：Driver 在提交节点（适合学习 / 调试）
-# cluster：Driver 在 YARN（适合生产）
-spark.submit.deployMode            client
+spark.submit.deployMode            cluster
 
 ############################
 # 应用 & Web UI
@@ -28,28 +26,6 @@ spark.eventLog.dir                 hdfs:///spark-logs
 spark.eventLog.compress            true
 
 ############################
-# Driver 资源配置
-############################
-# Driver 使用的内存大小
-spark.driver.memory                768m
-spark.yarn.driver.memoryOverhead   256m
-# Driver 使用的 CPU 核数
-spark.driver.cores                 1
-# Driver 最大结果集大小（防 OOM）
-spark.driver.maxResultSize         512m
-
-############################
-# Executor 资源配置
-############################
-# Executor 使用的内存
-spark.executor.memory              1g
-spark.yarn.executor.memoryOverhead 256m
-# 每个 Executor 使用的 CPU 核数
-spark.executor.cores               1
-# Executor 数量（静态方式）
-spark.executor.instances           2
-
-############################
 # 序列化 & 性能
 ############################
 # 使用 Kryo（比 Java 快）
@@ -67,13 +43,6 @@ spark.sql.shuffle.partitions       4
 spark.shuffle.compress             true
 # 是否启用 spill 压缩
 spark.shuffle.spill.compress       true
-
-############################
-# 内存管理
-############################
-# 统一内存管理
-spark.memory.fraction              0.6
-spark.memory.storageFraction       0.5
 
 ############################
 # 容错 & 重试
