--- a/notes/home/user/Spark/conf/spark-defaults.conf
+++ b/notes/home/user/Spark/conf/spark-defaults.conf
@@ -22,6 +22,7 @@ spark.ui.enabled                   true
 spark.eventLog.enabled             true
 # 日志存储位置（HDFS）
 spark.eventLog.dir                 hdfs:///spark-logs
+spark.history.fs.logDirectory      hdfs:///spark-logs
 # 是否压缩事件日志
 spark.eventLog.compress            true
 
